# chatgptauri

./: .gitignore  .lvimrc  Cargo.toml  package-lock.json  package.json  styles.css
src/: App.svelte  Main.svelte  MultilineParagraph.svelte  Settings.svelte  app.rs  chat.ts  page.ts  renderlatex.ts  settings.ts  styles.css
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/src/: chat.rs  conversation.rs  gpt.rs  gpt4.rs  main.rs  settings.rs
src/lib/: Button.svelte  Input.svelte
