[package]
name = "chatgptauri-svelte"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
openai = "1.0.0-alpha.7"
toml = "0.7.3"
directories = "5.0.0"
reqwest = "0.11.16"
thiserror = "1.0.40"
anyhow = "1.0.70"
reqwest-eventsource = "0.4.0"
tokio-stream = "0.1.14"
async-stream = "0.3.5"
futures-core = "0.3.28"
eventsource-stream = "0.2.3"
rand = "0.8.5"
tokio = { version = "1.28.0", features = ["fs"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
